Name:                topbar
Version:             0.1.0
Synopsis:            a lean desktop bar
Description:         a lean desktop bar
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Desktop
Stability:           experimental
Build-Type:          Simple
Homepage:            http://github.com/vincenthz/topbar
Cabal-Version:       >=1.10
data-files:          README.md

Executable           topbar
  Main-Is:           Topbar.hs
  ghc-options:       -Wall -fno-warn-missing-signatures -threaded
  c-sources: cbits/gdk_property_change_wrapper.c
  Hs-Source-Dirs:    src
  default-language:  Haskell2010
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , utf8-string
                   , unix
                   , cairo
                   , mtl
                   , directory
                   , filepath
                   , time
                   , old-locale
                   , gtk >= 0.12
                   , gtk-traymanager >= 0.1.2
                   , xmonad
                   , xmonad-contrib
  pkgconfig-depends: gtk+-2.0

source-repository head
  type: git
  location: git://github.com/vincenthz/topbar
